--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ img {
 
 .bannner-section {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("/icons/Liquor Website assets/Group 50784.png");
-    height: 50%;
+    /* height: 50%; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
